<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/app_logo"
        android:textStyle="bold"
        android:textSize="48sp"
        android:textColor="@color/blue"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/firstname_edit_text"
        android:layout_width="145dp"
        android:layout_height="48dp"
        android:autofillHints="text"
        android:hint="@string/firstname"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="50dp"
        style="@style/CustomEditTextStyle"
        android:background="@drawable/custom_edit_text"
        app:layout_constraintTop_toBottomOf="@id/app_name"
        app:layout_constraintStart_toStartOf="@id/login_edit_text"
        app:layout_constraintEnd_toStartOf="@id/lastname_edit_text"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/lastname_edit_text"
        android:layout_width="145dp"
        android:layout_height="48dp"
        android:autofillHints="text"
        android:hint="@string/lastname"
        android:layout_marginStart="5dp"
        android:layout_marginTop="50dp"
        style="@style/CustomEditTextStyle"
        android:background="@drawable/custom_edit_text"
        app:layout_constraintTop_toBottomOf="@id/app_name"
        app:layout_constraintStart_toEndOf="@id/firstname_edit_text"
        app:layout_constraintEnd_toEndOf="@id/login_edit_text"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/login_edit_text"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:autofillHints="text"
        android:hint="@string/login"
        android:layout_marginTop="10dp"
        style="@style/CustomEditTextStyle"
        android:background="@drawable/custom_edit_text"
        app:layout_constraintTop_toBottomOf="@id/firstname_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:autofillHints="password"
        android:hint="@string/password"
        android:layout_marginTop="10dp"
        style="@style/CustomEditTextStyle"
        android:background="@drawable/custom_edit_text"
        app:layout_constraintTop_toBottomOf="@id/login_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="RtlSymmetry,TextFields" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_button"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:text="@string/register_button"
        android:layout_marginTop="10dp"
        style="@style/CustomButton"
        app:layout_constraintTop_toBottomOf="@id/password_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
