<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/create_route"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_route_title"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/route_name"
        android:layout_width="400dp"
        android:layout_height="48dp"
        android:autofillHints="text"
        android:hint="@string/route_name"
        style="@style/CustomEditTextStyle"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_route" />

    <EditText
        android:id="@+id/start_city"
        android:layout_width="400dp"
        android:layout_height="48dp"
        android:autofillHints="text"
        android:hint="@string/start_city_hint"
        style="@style/CustomEditTextStyle"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/route_name" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ticket_list"
        android:layout_width="400dp"
        android:layout_height="350dp"
        android:background="@drawable/travel_item_background"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start_city" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_cities_button"
        android:layout_width="400dp"
        android:layout_height="48dp"
        android:text="@string/add_cities_button"
        android:layout_marginTop="5dp"
        style="@style/CustomButton"
        app:layout_constraintTop_toBottomOf="@id/ticket_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create_route_button"
        android:layout_width="400dp"
        android:layout_height="48dp"
        android:text="@string/create_route_button"
        android:layout_marginTop="70dp"
        style="@style/CustomButton"
        app:layout_constraintTop_toBottomOf="@id/add_cities_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>