<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/app_logo"
        android:textStyle="bold"
        android:textSize="48sp"
        android:textColor="@color/blue"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/login_edit_text"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:autofillHints="text"
        android:hint="@string/login"
        android:layout_marginTop="50dp"
        style="@style/CustomEditTextStyle"
        android:background="@drawable/custom_edit_text"
        app:layout_constraintTop_toBottomOf="@id/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:autofillHints="password"
        android:hint="@string/password"
        android:layout_marginTop="10dp"
        style="@style/CustomEditTextStyle"
        android:background="@drawable/custom_edit_text"
        app:layout_constraintTop_toBottomOf="@id/login_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="RtlSymmetry,TextFields" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_button"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:text="@string/login_button"
        android:layout_marginTop="10dp"
        style="@style/CustomButton"
        app:layout_constraintTop_toBottomOf="@id/password_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        android:text="@string/register_text"
        android:textColor="@color/blue"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/show_graph_button"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:text="Показать граф"
        android:layout_marginTop="20dp"
        style="@style/CustomButton"
        app:layout_constraintTop_toBottomOf="@id/register_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
