<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/city_array"
        android:layout_width="400dp"
        android:layout_height="350dp"
        android:background="@drawable/travel_item_background"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/city_edit_text"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:autofillHints="text"
        android:hint="@string/city"
        android:layout_marginTop="10dp"
        style="@style/CustomEditTextStyle"
        app:layout_constraintTop_toBottomOf="@id/city_array"
        app:layout_constraintStart_toStartOf="@id/city_array" />

    <ImageView
        android:id="@+id/date"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/baseline_calendar_month_24"
        android:contentDescription="@string/date_desc"
        app:layout_constraintStart_toEndOf="@id/city_edit_text"
        app:layout_constraintTop_toTopOf="@id/city_edit_text"
        app:layout_constraintBottom_toBottomOf="@id/city_edit_text"
        app:layout_constraintEnd_toEndOf="@id/city_array"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_city_button"
        android:layout_width="400dp"
        android:layout_height="48dp"
        android:text="@string/add_city_button"
        android:layout_marginTop="10dp"
        style="@style/CustomButton"
        app:layout_constraintTop_toBottomOf="@id/city_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/complete_button"
        android:layout_width="400dp"
        android:layout_height="48dp"
        android:text="@string/complete_button"
        android:layout_marginTop="100dp"
        style="@style/CustomButton"
        app:layout_constraintTop_toBottomOf="@id/add_city_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
